--- a/src/components/collection_item/collection_item.scss
+++ b/src/components/collection_item/collection_item.scss
@@ -1,9 +1,11 @@
 .item {
   display: flex;
   flex-direction: column;
+  align-items: center;
   margin-top: 2rem;
   width: 280px;
   height: 370px;
+  position: relative;
 
   img {
     width: 100%;
@@ -12,13 +14,29 @@
   }
 
   .product_info {
-    height: 5%;
+    width: 100%;
     display: flex;
     justify-content: space-between;
+    height: 5%;
     font-size: 18px;
   }
+
+  .custom_button {
+    width: 80%;
+    opacity: 0.7;
+    position: absolute;
+    top: 16rem;
+    display: none;
+  }
+
+  &:hover {
+    img {
+      opacity: 0.8;
+    }
+
+    .custom_button {
+      opacity: 0.85;
+      display: flex;
+    }
+  }
 }
-
-
-
-
