--- a/src/components/custom_button/custom_button.scss
+++ b/src/components/custom_button/custom_button.scss
@@ -8,6 +8,10 @@
   letter-spacing: 0.5px;
   cursor: pointer;
 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   &:hover {
     background: white;
     color: black;
@@ -21,6 +25,18 @@
 
     &:hover {
       background: #357ae8;
+      border: none;
+    }
+  }
+
+  &.inverted {
+    background: white;
+    color: black;
+    border: 1px solid black;
+
+    &:hover {
+      background: black;
+      color: white;
       border: none;
     }
   }
