--- a/src/components/cart_dropdown/cart_dropdown.scss
+++ b/src/components/cart_dropdown/cart_dropdown.scss
@@ -1,7 +1,4 @@
 .cart_dropdown {
-  overflow-y: auto; //make div scrolling vertically
-  overflow-x: hidden; //disable horizontal scrolling
-
   position: absolute;
   display: flex;
   flex-direction: column;
@@ -14,9 +11,16 @@
   height: 450px;
 
   .cart_items {
-    width: 500px;
+    width: 300px;
     height: 540px;
     overflow: scroll;
+
+    .empty_cart {
+      display: flex;
+      justify-content: center;
+      margin-top: 8rem;
+      font-size: 1.2rem;
+    }
   }
 
   .button {
