--- a/src/components/preview_collection/collection_preview.scss
+++ b/src/components/preview_collection/collection_preview.scss
@@ -1,4 +1,5 @@
 .collection_preview {
+  margin: 0 5rem;
   display: flex;
   justify-content: center;
   gap: 3rem;
@@ -9,4 +10,3 @@
   margin-left: 5.2rem;
   margin-bottom: 0rem;
 }
-
