--- a/src/pages/checkout_page/checkoutpage.scss
+++ b/src/pages/checkout_page/checkoutpage.scss
@@ -45,4 +45,23 @@
     justify-content: flex-end;
     font-size: 2rem;
   }
+
+  .payment {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .test-warning {
+      text-align: center;
+      color: red;
+      font-size: 1.3rem;
+    }
+
+    .button {
+      width: 50%;
+      display: flex;
+      justify-content: flex-end;
+      margin: 3rem 0;
+    }
+  }
 }
