made the application mobile responsive

--- a/client/src/components/menu_item/menu_item.scss
+++ b/client/src/components/menu_item/menu_item.scss
@@ -12,8 +12,7 @@
     margin: 0;
     padding: 0;
     margin-left: 0;
-    width: 15rem;
-    background: red;
+    width: 90%;
   }
 
   &:hover {
@@ -34,7 +33,6 @@
   &.large {
     height: 380px;
   }
-
 
   .background-image {
     width: 100%;
