--- a/client/src/components/checkout_item/checkout_item.scss
+++ b/client/src/components/checkout_item/checkout_item.scss
@@ -39,3 +39,13 @@
     margin-left: 0.4rem;
   }
 }
+
+@media screen and (max-width: 800px) {
+  .checkout_item {
+    height: 8rem;
+  }
+
+  .item_info:nth-child(3) {
+    font-size: 1rem;
+  }
+}
