--- a/client/src/components/directory/directory.scss
+++ b/client/src/components/directory/directory.scss
@@ -6,7 +6,7 @@
   text-transform: uppercase;
 
   @media screen and (max-width: 800px) {
-    width: 18rem;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
