--- a/client/src/pages/sign_in_and_sign_up_page/sign_in_and_sign_up_page.scss
+++ b/client/src/pages/sign_in_and_sign_up_page/sign_in_and_sign_up_page.scss
@@ -9,3 +9,14 @@
   // justify-content: space-between;
   // margin: 0 auto;
 }
+
+@media screen and (max-width: 800px) {
+  .sign_in_and_sign_up {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0;
+    margin-bottom: 6rem;
+  }
+}
