--- a/client/src/components/collection_item/collection_item.scss
+++ b/client/src/components/collection_item/collection_item.scss
@@ -22,12 +22,11 @@
   }
 
   .custom_button {
-    width: 80%;
+    width: 60%;
     opacity: 0.7;
     position: absolute;
     top: 16rem;
     display: none;
-    justify-content: center;
   }
 
   &:hover {
@@ -46,6 +45,10 @@
   .item {
     width: 100%;
     height: 18rem;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
     .product_info {
       font-size: 1rem;
@@ -53,11 +56,11 @@
 
     .custom_button {
       top: 12rem;
-      left: 1.5rem;
-      display: block;
+      display: flex;
+      justify-content: center;
+      width: 70%;
       opacity: unset;
       min-width: unset;
-      justify-content: center;
       padding: 0 10px;
     }
 
@@ -68,7 +71,7 @@
 
       .custom_button {
         opacity: unset;
-        display: block;
+        display: flex;
       }
     }
   }
